--- a/sistema_config/sistemaEducacion/Templates/Administrador/admin_profe.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/admin_profe.html
@@ -11,7 +11,7 @@
     <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
         href="{% url 'admin_alum' %}">Administrar Alumnos ></a></li>
     <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_user' %}">Administrar Usuarios ></a></li>
+        href="{% url 'admin_user' %}">Generar Administrador></a></li>
     <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
         href="{% url 'control_plan' %}">Control de Planificaciones ></a></li>
   </div>
