--- a/sistema_config/sistemaEducacion/Templates/Administrador/admin_user.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/admin_user.html
@@ -11,14 +11,14 @@
     <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
         href="{% url 'admin_alum' %}">Administrar Alumnos ></a></li>
     <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_user' %}">Administrar Usuarios ></a></li>
+        href="{% url 'admin_user' %}">Generar Administrador></a></li>
     <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
         href="{% url 'control_plan' %}">Control de Planificaciones ></a></li>
   </div>
   <div class="col-md-9">
     <div class="row">
       <div class="col-md-4" style="border-left: 1px solid black;">
-        <h2 class="titCurso" style="text-align: center; margin-bottom: 1%; ">Administrar Usuarios</h2>
+        <h2 class="titCurso" style="text-align: center; margin-bottom: 1%; ">Crear Admin</h2>
         <form class="formularioReunion" style="margin-bottom: 5%;">
           <div class="mb-3">
             <label for="fecha" class="form-label">Rut:</label>
