--- a/sistema_config/sistemaEducacion/Templates/Administrador/control_plan.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/control_plan.html
@@ -5,16 +5,16 @@
 <div class="container-fluid row">
     <div class="col-md-3" style="margin-top: 2%;">
         <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-                href="{% url 'admin_apoderado' %}">Administrar Apoderados ></a></li>
+            href="{% url 'admin_apoderado' %}">Administrar Apoderados ></a></li>
         <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-                href="{% url 'admin_profe' %}">Administrar Profesores ></a></li>
+            href="{% url 'admin_profe' %}">Administrar Profesores ></a></li>
         <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-                href="{% url 'admin_alum' %}">Administrar Alumnos ></a></li>
+            href="{% url 'admin_alum' %}">Administrar Alumnos ></a></li>
         <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-                href="{% url 'admin_user' %}">Administrar Usuarios ></a></li>
+            href="{% url 'admin_user' %}">Generar Administrador></a></li>
         <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-                href="{% url 'control_plan' %}">Control de Planificaciones ></a></li>
-    </div>
+            href="{% url 'control_plan' %}">Control de Planificaciones ></a></li>
+      </div>
     <div class="col-md-9">
         <div class="row">
             <div class="col-md-12" style="border-left: 1px solid black;">
