--- a/sistema_config/sistemaEducacion/Templates/Administrador/admin_apoderado.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/admin_apoderado.html
@@ -2,71 +2,90 @@
 {% load static %}
 {% block contenido %}
 
-<div class="container-fluid row">
-  <div class="col-md-3" style="margin-top: 2%;">
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_apoderado' %}">Administrar Apoderados ></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_profe' %}">Administrar Profesores ></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_alum' %}">Administrar Alumnos ></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_user' %}">Generar Administrador></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'control_plan' %}">Control de Planificaciones ></a></li>
-  </div>
-  <div class="col-md-9">
+<div class="dropdown">
+  <button style="margin-left: 1%; margin-top: 0.5%;" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Menu de Administracion
+  </button>
+  <ul class="dropdown-menu" >
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black;"
+      href="{% url 'admin_apoderado' %}">Administrar Apoderados</a></li>
+      <hr>
+  <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+      href="{% url 'admin_profe' %}">Administrar Profesores</a></li>
+      <hr>
+  <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+      href="{% url 'admin_alum' %}">Administrar Alumnos</a></li>
+      <hr>
+  <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+      href="{% url 'admin_user' %}">Generar Administrador</a></li>
+      <hr>
+  <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+      href="{% url 'control_plan' %}">Control de Planificaciones</a></li>
+      <hr>
+  <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+      href="{% url 'admin_evento' %}">Gestionar Eventos</a></li>   
+  </ul>
+</div>
+  <div class="col-md-12">
     <div class="row">
       <div class="col-md-4" style="border-left: 1px solid black;">
         <h2 class="titCurso" style="text-align: center; margin-bottom: 1%;">Administrar Apoderados</h2>
-        <form class="formularioReunion" method="POST" style="margin-bottom: 5%;">
+        <form class="formularioEVENTO" method="POST" style="margin-bottom: 5%;">
           {% csrf_token %}
           <div class="mb-3">
             <label for="rut" class="form-label">Rut:</label>
-            <input type="text" class="form-control shadow" id="rut" name="rut" placeholder="sin puntos ni digito verificador" required>
+            <input type="text" class="form-control shadow" id="rut" name="rut"
+              placeholder="sin puntos ni digito verificador" required>
           </div>
           <div class="mb-3">
             <label for="dv" class="form-label">DV:</label>
-            <input type="text" class="form-control shadow" id="dv"  name="dv" placeholder="Digito verificador" required>
+            <input type="text" class="form-control shadow" id="dv" name="dv" placeholder="Digito verificador">
           </div>
+
           <div class="mb-3">
             <label for="nombre" class="form-label">Nombres:</label>
-            <input class="form-control shadow" id="nombre"  name="nombre"></input>
+            <input class="form-control shadow" id="nombre" name="nombre">
           </div>
+
           <div class="mb-3">
             <label for="apellido" class="form-label">Apellido</label>
-            <input class="form-control shadow" id="apellido"  name="apellido"></input>
+            <input class="form-control shadow" id="apellido" name="apellido">
           </div>
+
           <div class="mb-3">
             <label for="telefono" class="form-label">Numero Telefonico</label>
-            <input class="form-control shadow" id="telefono" name="telefono"></input>
+            <input class="form-control shadow" id="telefono" name="telefono">
           </div>
+
           <div class="mb-3">
             <label for="direccion" class="form-label">Direccion</label>
-            <input class="form-control shadow" id="direccion"  name="direccion"></input>
+            <input class="form-control shadow" id="direccion" name="direccion">
           </div>
+
           <div class="mb-3">
             <label for="comuna" class="form-label">Comuna</label>
-            <select name="comuna" class="form-select">
+            <select name="comuna" class="form-select shadow">
               <option>Selecciona...</option>
               {% for co in comuna %}
               <option value="{{ co.0 }}">{{ co.1 }}</option>
               {% endfor %}
             </select>
-          </div>                    
+          </div>
+
           <div class="mb-3">
-            <label for="correo" class="form-label">Correo Electrónico</label>
-            <select name="correo" class="form-select">
+            <label for="rol" class="form-label">Rol:</label>
+            <select name="rol" class="form-select shadow">
               <option>Selecciona...</option>
-              {% for cr in correo %}
-              <option value="{{ cr.0 }}">{{ cr.1 }}</option>
+              {% for r in rol %}
+              <option value="{{ r.0 }}">{{ r.1 }}</option>
               {% endfor %}
             </select>
           </div>
+
           
-          <button type="submit" class="btn btn-success">Guardar</button>
-          <button  class="btn btn-primary">Modificar</button>
-          <button  class="btn btn-danger">Eliminar</button>
+          <button type="submit" class="btn btn-success" name="guardar">Guardar</button>
+          <button class="btn btn-primary">Modificar</button>
+          <button type="submit" class="btn btn-danger" name="eliminar">Eliminar</button>
         </form>
       </div>
       <div class="col-md-8">
@@ -85,15 +104,41 @@
           <tbody>
             {% for ap in apoderados %}
             <tr data-toggle="modal" data-target="#alumnoModal">
-              <td>{{ ap.0 }}</td> 
-              <td>{{ ap.1 }}</td> 
+              <td><a href="#" class="enlaceTexto">{{ ap.0 }}</a></td>
+              <td>{{ ap.1 }}</td>
               <td>{{ ap.2 }}</td>
-              <td>{{ ap.3 }}</td> 
-              <td>{{ ap.4 }}</td> 
-              <td>{{ ap.5 }}</td> 
+              <td>{{ ap.3 }}</td>
+              <td>{{ ap.4 }}</td>
+              <td>{{ ap.5 }}</td>
             </tr>
             {% endfor %}
           </tbody>
+                  
+          <script>
+            document.addEventListener("DOMContentLoaded", function () {
+              var enlacesTexto = document.querySelectorAll(".enlaceTexto");
+              var formulario = document.querySelector(".formularioReunion");
+          
+              enlacesTexto.forEach(function (enlace) {
+                enlace.addEventListener("click", function (event) {
+                  event.preventDefault();
+          
+                  // Obtiene los valores de la fila
+                  var rut = this.textContent;
+                  var nombre = this.parentNode.nextElementSibling.textContent;
+                  var telefono = this.parentNode.nextElementSibling.nextElementSibling.textContent;
+                  var direccion = this.parentNode.nextElementSibling.nextElementSibling.nextElementSibling.textContent;
+          
+                  // Llena los campos del formulario con los valores
+                  formulario.querySelector("#rut").value = rut;
+                  formulario.querySelector("#nombre").value = nombre;
+                  formulario.querySelector("#telefono").value = telefono;
+                  formulario.querySelector("#direccion").value = direccion;
+                });
+              });
+            });
+          </script>
+          
         </table>
 
 
@@ -101,6 +146,8 @@
     </div>
   </div>
 </div>
+
+
 
 
 
