--- a/sistema_config/sistemaEducacion/Templates/Administrador/admin_profe.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/admin_profe.html
@@ -3,19 +3,31 @@
 {% block contenido %}
 
 <div class="container-fluid row">
-  <div class="col-md-3" style="margin-top: 2%;">
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_apoderado' %}">Administrar Apoderados ></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_profe' %}">Administrar Profesores ></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_alum' %}">Administrar Alumnos ></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_user' %}">Generar Administrador></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'control_plan' %}">Control de Planificaciones ></a></li>
+  <div class="dropdown">
+    <button style="margin-left: 1%; margin-top: 0.5%;" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Menu de Administracion
+    </button>
+    <ul class="dropdown-menu" >
+      <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black;"
+        href="{% url 'admin_apoderado' %}">Administrar Apoderados</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'admin_profe' %}">Administrar Profesores</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'admin_alum' %}">Administrar Alumnos</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'admin_user' %}">Generar Administrador</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'control_plan' %}">Control de Planificaciones</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'admin_evento' %}">Gestionar Eventos</a></li>   
+    </ul>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-12">
     <div class="row">
       <div class="col-md-4" style="border-left: 1px solid black;">
         <h2 class="titCurso" style="text-align: center; margin-bottom: 1%; ">Administrar Profesores</h2>
@@ -47,7 +59,7 @@
           </div>
           <div class="mb3">
             <label for="comuna" class="form-label">Comuna:</label>
-            <select name="comuna" id="comuna" class="form-select">
+            <select name="comuna" id="comuna" class="form-select shadow">
               <option value="">Selecciona...</option>
               {% for co in comuna %}
               <option value="{{ co.0}}">{{co.1}}</option>
@@ -56,7 +68,7 @@
           </div>
           <div class="mb3">
             <label for="curso" class="form-label">Curso:</label>
-            <select name="curso" id="curso" class="form-select">
+            <select name="curso" id="curso" class="form-select shadow">
               <option value="">Seleccione....</option>
               {% for c in curso %}
               <option value="{{c.0}}">{{c.1}}</option>
@@ -65,7 +77,7 @@
           </div>
           <div class="mb3" style="margin-bottom: 2%;">
             <label for="rol" class="form-label">Rol:</label>
-            <select name="rol" id="rol" class="form-select">
+            <select name="rol" id="rol" class="form-select shadow">
               <option value="">Selecccione...</option>
               {% for r in rol %}
               <option value="{{r.0}}">{{r.1}}</option>
