--- a/sistema_config/sistemaEducacion/Templates/Administrador/admin_user.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/admin_user.html
@@ -3,67 +3,83 @@
 {% block contenido %}
 
 <div class="container-fluid row">
-  <div class="col-md-3" style="margin-top: 2%;">
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_apoderado' %}">Administrar Apoderados ></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_profe' %}">Administrar Profesores ></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_alum' %}">Administrar Alumnos ></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'admin_user' %}">Generar Administrador></a></li>
-    <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-        href="{% url 'control_plan' %}">Control de Planificaciones ></a></li>
+  <div class="dropdown">
+    <button style="margin-left: 1%; margin-top: 0.5%;" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Menu de Administracion
+    </button>
+    <ul class="dropdown-menu" >
+      <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black;"
+        href="{% url 'admin_apoderado' %}">Administrar Apoderados</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'admin_profe' %}">Administrar Profesores</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'admin_alum' %}">Administrar Alumnos</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'admin_user' %}">Generar Administrador</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'control_plan' %}">Control de Planificaciones</a></li>
+        <hr>
+    <li style="list-style-type: none; margin-bottom: 4%; margin-left: 5%; margin-right: 0.2%;"><a style="text-decoration: none; color: black; "
+        href="{% url 'admin_evento' %}">Gestionar Eventos</a></li>   
+    </ul>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-12">
     <div class="row">
       <div class="col-md-4" style="border-left: 1px solid black;">
         <h2 class="titCurso" style="text-align: center; margin-bottom: 1%; ">Crear Admin</h2>
-        <form class="formularioReunion" style="margin-bottom: 5%;">
+        <form class="formularioReunion" method="POST" style="margin-bottom: 5%;">
+          {% csrf_token %}
           <div class="mb-3">
-            <label for="fecha" class="form-label">Rut:</label>
-            <input type="text" class="form-control shadow" id="rut" required>
+            <label for="correo" class="form-label">Correo:</label>
+            <input class="form-control shadow" id="correo" name="correo"></input>
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Nombre Completo:</label>
-            <input class="form-control shadow" id="exampleFormControlTextarea1"></input>
+            <label for="contrasenia" class="form-label">Contraseña:</label>
+            <input type="password" class="form-control shadow" id="contrasenia" name="contrasenia"></input>
           </div>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea2" class="form-label">Usuario:</label>
-            <input class="form-control shadow" id="exampleFormControlTextarea2"></input>
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea3" class="form-label">Contraseña:</label>
-            <input type="password" class="form-control shadow" id="exampleFormControlTextarea3"></input>
+          <div class="mb3" style="margin-bottom: 2%;">
+            <label for="rol" class="form-label">Rol:</label>
+            <select name="rol" id="rol" class="form-select shadow">
+              <option value="">Selecccione...</option>
+              {% for r in rol %}
+              <option value="{{r.0}}">{{r.1}}</option>
+              {% endfor %}
+            </select>
           </div>
           <button type="submit" class="btn btn-success">Guardar</button>
-          <button type="submit" class="btn btn-primary">Modificar</button>
-          <button type="submit" class="btn btn-danger">Eliminar</button>
+          <button type="" class="btn btn-primary">Modificar</button>
+          <button type="" class="btn btn-danger">Eliminar</button>
         </form>
       </div>
       <div class="col-md-8">
         <h2 class="titCurso" style="text-align: center; ">Lista Usuarios</h2>
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>RUT</th>
-              <th>Correo</th>
-              <th>Contraseña</th>
-              <th>Rol</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for user in usuarios %}
-            <tr data-toggle="modal" data-target="#alumnoModal">
-              <td>{{ user.0 }}</td>
-              <td>{{ user.1 }}</td>
-              <td>{{ user.2 }}</td>
-              <td>{{ user.3 }}</td>
-            </tr>
-            {% endfor %}
-            <!-- Agrega más filas para otros alumnos -->
-          </tbody>
-        </table>
+        <div style="overflow-x: auto;">
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Correo</th>
+                <th>Contraseña</th>
+                <th>Rol</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for user in usuarios %}
+              <tr>
+                <td>{{ user.0 }}</td>
+                <td>{{ user.1 }}</td>
+                <td>{{ user.2 }}</td>
+                <td>{{ user.3 }}</td>
+              </tr>
+              {% endfor %}
+              <!-- Agrega más filas para otros alumnos -->
+            </tbody>
+          </table>
+        </div>
 
 
       </div>
