--- a/sistema_config/sistemaEducacion/Templates/Administrador/control_plan.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/control_plan.html
@@ -3,19 +3,26 @@
 {% block contenido %}
 
 <div class="container-fluid row">
-    <div class="col-md-3" style="margin-top: 2%;">
-        <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-            href="{% url 'admin_apoderado' %}">Administrar Apoderados ></a></li>
-        <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-            href="{% url 'admin_profe' %}">Administrar Profesores ></a></li>
-        <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-            href="{% url 'admin_alum' %}">Administrar Alumnos ></a></li>
-        <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-            href="{% url 'admin_user' %}">Generar Administrador></a></li>
-        <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
-            href="{% url 'control_plan' %}">Control de Planificaciones ></a></li>
-      </div>
-    <div class="col-md-9">
+    <div class="dropdown">
+      <button style="margin-left: 1%; margin-top: 0.5%;" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Menu de Administracion
+      </button>
+      <ul class="dropdown-menu" >
+        <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black;"
+          href="{% url 'admin_apoderado' %}">Administrar Apoderados ></a></li>
+      <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
+          href="{% url 'admin_profe' %}">Administrar Profesores ></a></li>
+      <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
+          href="{% url 'admin_alum' %}">Administrar Alumnos ></a></li>
+      <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
+          href="{% url 'admin_user' %}">Generar Administrador></a></li>
+      <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
+          href="{% url 'control_plan' %}">Control de Planificaciones ></a></li>
+      <li style="list-style-type: none; margin-bottom: 4%;"><a style="text-decoration: none; color: black; "
+          href="{% url 'admin_evento' %}">Gestionar Eventos ></a></li>   
+      </ul>
+    </div>
+    <div class="col-md-12">
         <div class="row">
             <div class="col-md-12" style="border-left: 1px solid black;">
                 <h2 class="titCurso" style="text-align: center; margin-bottom:1%;">Lista Apoderados</h2>
