--- a/sistema_config/sistemaEducacion/Templates/Profesor/clase.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/clase.html
@@ -22,7 +22,6 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th>Foto</th>
             <th>RUT</th>
             <th>Nombre Completo</th>
           </tr>
@@ -30,9 +29,7 @@
         <tbody>
           {% for al in alumnos %}
           <tr data-toggle="modal" data-target="#alumnoModal">
-            <td><a href="#" value="{{al.0}}"><img src="{% static 'img/usuario.png' %}" alt="Imagen Alumno" width="50" height="50"></a>
-            </td>
-            <td>{{al.0}}</td>
+            <td><a href="#" value="{{al.0}}">{{al.0}}</td>
             <td>{{al.1}}</td>
           </tr>
           {% endfor %}
