--- a/sistema_config/sistemaEducacion/Templates/base.html
+++ b/sistema_config/sistemaEducacion/Templates/base.html
@@ -58,7 +58,7 @@
               <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'sistema_Profe' %}">Sistema</a>
+              <a class="nav-link" href="{% url 'sistema_Profe' %}">Profesor</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'apoderado' %}">Apoderado-Alumno</a>
