--- a/sistema_config/sistemaEducacion/Templates/Administrador/dashboard.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/dashboard.html
@@ -2,7 +2,5 @@
 {% load static %}
 {% block contenido %}
 
-            <iframe title="Report Section" width="100%" height="650" src="https://app.powerbi.com/view?r=eyJrIjoiNWYyZGRiOWUtOTZkNC00MzQ2LWIzNzUtMzhjMThlZTlmYzQ3IiwidCI6IjcyZmQwYjVhLThhNmEtNGNmZi04OWY2LWJkZTk2MWY3ZTI1MCIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
-
-
+<iframe title="Report Section" src="https://app.powerbi.com/view?r=eyJrIjoiNTY0ZjhiYWYtZDlhZi00MmJmLWJhNzEtMGRkMzY1ZmRmZGNmIiwidCI6IjcyZmQwYjVhLThhNmEtNGNmZi04OWY2LWJkZTk2MWY3ZTI1MCIsImMiOjR9" frameborder="0" allowFullScreen="true" height="100%" width="100%"></iframe>
 {% endblock %}
