--- a/sistema_config/sistemaEducacion/Templates/base.html
+++ b/sistema_config/sistemaEducacion/Templates/base.html
@@ -31,48 +31,38 @@
 
 <body>
   <!--Navegador-->
-  <nav class="navbar navbar-expand-lg bg-dark " data-bs-theme="dark">
+  <nav class="navbar navbar-expand-lg bg-light shadow" data-bs-theme="bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="">
-        <!-- Esta linea indica que si estamos en el home el nombre del colegio no se mostrara mientras que en las otras vistas si -->
-        {% if is_home %}
-        <!-- No mostrar "Colegio X" en la página de inicio -->
-        {% else %}
-        <img src="{% static 'img/logoDuocpng.png' %}" alt="" style="max-height: 40px;">
-        {% endif %}
+        <img src="{% static 'img/SAN-CARLOS-COMUNICA.jpg' %}" alt="" style="max-height: 60px; ">
       </a>
-
-      <!-- Mover el bloque de menú a la derecha -->
       <div class="ml-auto">
-        <!-- Botón del menú colapsado personalizado -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-          <span class="navbar-toggler-text">Menú</span> <!-- Texto personalizado para el botón -->
+          <span class="navbar-toggler-text">Menú</span>
         </button>
-
-        <!-- Contenido del menú colapsado -->
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'index' %}" style="font-size: x-large;">Inicio</a>
             </li>
             {% if is_login_successful %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'sistema_Profe' %}">Profesor</a>
+              <a class="nav-link" href="{% url 'sistema_Profe' %}" style="font-size: x-large;">Profesor</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'apoderado' %}">Apoderado-Alumno</a>
+              <a class="nav-link" href="{% url 'apoderado' %}" style="font-size: x-large;">Apoderado-Alumno</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'admin_apoderado' %}">Administracion</a>
+              <a class="nav-link" href="{% url 'admin_apoderado' %}" style="font-size: x-large;">Administracion</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'index' %}">Cerrar Sesión</a>
+              <a class="nav-link" href="{% url 'index' %}" style="font-size: x-large;">Cerrar Sesión</a>
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'iniciar_sesion' %}">Iniciar Sesión</a>
+              <a class="nav-link" href="{% url 'iniciar_sesion' %}" style="font-size: x-large;">Iniciar Sesión</a>
             </li>
             {% endif %}
 
@@ -81,70 +71,6 @@
       </div>
     </div>
   </nav>
-
-
-  <!--<nav class="navbar navbar-expand-lg bg-dark " data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="">
-        <Esta linea indica que si estamos en el home el nombre del colegio no se mostrara mientras que en las otras vistas si ->
-        {% if is_home %}
-        #No mostrar "Colegio X" en la página de inicio
-        {% else %}
-        <img src="{% static 'img/logoDuocpng.png' %}" alt="" style="max-height: 40px;">
-        {% endif %}
-      </a>
-
-      #Mover el bloque de menú a la derecha
-      <div class="ml-auto">
-        #Botón del menú colapsado personalizado
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-          <span class="navbar-toggler-text">Menú</span>
-        </button>
-
-        #Contenido del menú colapsado
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Inicio</a>
-            </li>
-            {% if request.user.is_authenticated %}
-              {% if request.session.privilegios == 'Profesor' %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'sistema_Profe' %}">Profesor</a>
-                </li>
-              {% endif %}
-              {% if request.session.privilegios == 'Apoderado' %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'apoderado' %}">Apoderado-Alumno</a>
-                </li>
-              {% endif %}
-              {% if request.session.privilegios == 'Administrador' %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'admin_apoderado' %}">Administracion</a>
-                </li>
-              {% endif %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
-              </li>
-            {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'iniciar_sesion' %}">Iniciar Sesión</a>
-              </li>
-            {% endif %}
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>-->
-
-
-
-
-
-
-
 
 
   <!--Bloque de contenido-->
