--- a/sistema_config/sistemaEducacion/Templates/index.html
+++ b/sistema_config/sistemaEducacion/Templates/index.html
@@ -5,36 +5,25 @@
 
 
 <!--Titulo Nombre Colegio-->
-<div>
-    <h1 class="tituloCole">Colegio San Carlos Puente Alto</h1>
-</div>
-
 <!--Imagen del colegio-->
-<div class="contenedorImg">
-    <div class="contenido">
-        <img class="imgCole" src="{% static 'img/Colegio3.jpeg' %}" alt="Imagen Colegio">
-    </div>
+<div>
+    <img src="{% static 'img/Colegio3.jpeg' %}" alt="Imagen Colegio" width="100%" height="85%">
 </div>
 
 
 <!--Informacion del colegio-->
 <div class="informacionCole">
-    <h2 class="acerca">Nuestra Vision </h2>
-    <h5 class="info">Entregar una formación integral con énfasis en lo académico, 
-        formando hombres y mujeres competentes, reflexivos y críticos,
-         capaces de acceder a la educación superior y enfrentar con éxito los desafíos de la sociedad 
-         democrática del siglo XXI.</h5>
+    <h2 class="acerca">EVENTOS ESCOLARES</h2>
 </div>
 
-
-<!--eventos importantes del colegio-->
 
 <div class="eve">
     <div class="row row-cols-1 row-cols-md-4 g-5 eventos">
         {% for e in eventos %}
         <div class="col">
             <div class="card h-100">
-                <img src="data:imagen/jpeg;base64,{{ e.imagen }}" class="card-img-top" alt="..." height="350" style="border-radius: 15px;">
+                <img src="data:imagen/jpeg;base64,{{ e.imagen }}" class="card-img-top" alt="..." height="350"
+                    style="border-radius: 15px;">
             </div>
         </div>
         {% endfor %}
