--- a/sistema_config/sistemaEducacion/Templates/Profesor/sistema_Profe.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/sistema_Profe.html
@@ -12,7 +12,7 @@
     <div class="curso">
         <div id="interiorCurso">
             <h5 style="text-align: center;">{{c.0}} | Profesor: {{c.1}}</h5>
-            <div class="btn-group d-flex justify-content-center">
+            <div class="btn-group d-flex justify-content-center" style="margin-bottom: 1%;">
                 <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso" style="background-color: rgb(244,179,70);">Planificar Clase</a>
                 <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso" style="background-color: rgb(237,123,61);">Iniciar Clase</a>
                 <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso" style="background-color: rgb(15,48,74); color: white;">Calificar Alumnos</a>
